discussion/kv_engine/174038/174038_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51877: Add bucket throttling

Throttle commands if the current use of compute units
exceeds the throttle limit

Change-Id: Iafa92f8472fffdcc47b83190713d007f24ee6a11

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-26 06:48:02.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 06:56:08.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38330/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38330/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45625/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19110/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19110/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6641/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6641/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18766/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18766/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17888/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17888/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19808/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19808/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27181/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27181/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16982/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:113:38: error: use of undeclared identifier "SetBucketComputeUnitThrottleLimitsCommand" [clang-diagnostic-error]
            adminConnection->execute(SetBucketComputeUnitThrottleLimitsCommand{
                                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16982/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:113:38:
error: use of undeclared identifier "SetBucketComputeUnitThrottleLimitsCommand" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16982/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6734/ : FAILURE

Compile error at [2022-04-26T06:55:08.371Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_elixir.cc:113:38:
error: ?SetBucketComputeUnitThrottleLimitsCommand? was not declared in this scope; did you mean ?SetBucketComputeUnitThrottleLimitCommand??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6734/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15950/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
